Prepare for release 2.0.5