@@ -2,6 +2,7 @@ package se.kth.depclean.core;
 
 import java.io.IOException;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import se.kth.depclean.core.analysis.model.DebloatedDependency;
@@ -25,7 +26,7 @@ public abstract class AbstractDebloater<T> {
     setDependencies(
         analysis.getUsedDependencies().stream()
             .map(this::toProviderDependency)
-            .toList()
+            .collect(Collectors.toList())
     );
     logDependencies();
     postProcessDependencies();
